--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "json-to-dart",
-  "displayName": "JSON to Dart",
+  "name": "munasir-json-to-dart",
+  "displayName": "Dartify JSON",
   "description": "Speed up Flutter development by generating Dart models from JSON.",
+  "publisher": "MunasirPv",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.107.0"
+    "vscode": "^1.108.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MunasirPv/Json-to-Dart.git"
   },
   "categories": [
     "Other"
   ],
+  "icon": "logo.ico",
   "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
